# valhalla

./: .appveyor.yml  .azure-pipelines.yml  .clang-format  .clang-tidy  .dir-locals.el  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.bak  .gitmodules  .hadolint.yaml  .npmignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  .vcpkg_deps.txt  404.html  AUTHORS  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  COPYING  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  FindBoost.cmake  LICENSE  LICENSE.md  Makefile  Makefile.am  README.md  README_RADAR.md  SECURITY.md  Ubuntu_Bionic_Install.sh  attacher.cc  autogen.sh  (+77 more)
bench/: CMakeLists.txt  Makefile  cmake_install.cmake
bench/common/: utils.h
bench/meili/: CMakeLists.txt  Makefile  candidate_search.cc  cmake_install.cmake  config.json  mapmatch.cc
bench/midgard/: CMakeLists.txt  logging.cc
bench/mjolnir/: CMakeLists.txt  buildtiles.cc  config.json
bench/thor/: .CMakeLists.txt.swp  .f.swp  CMakeLists.txt  Makefile  astar.cc  cmake_install.cmake  config.json  costmatrix.cc  f  isochrone.cc  reach.cc  routes.cc  routing.cc
proto/: CMakeLists.txt  Makefile  api.proto  common.proto  directions.proto  directions_next.proto  directions_options.proto  expansion.proto  fileformat.proto  incidents.proto  info.proto  isochrone.proto  matrix.proto  navigator.proto  options.proto  osmformat.proto  route.proto  segment.proto  sideloaded.proto  sign.proto  status.proto  stub_message.proto  tile.proto  transit.proto  transit_fetch.proto  trip.proto  tripcommon.proto  tripdirections.proto  trippath.proto
proto/descriptors/: common.proto  directions.proto  expansion.proto  incidents.proto  options.proto  sign.proto
proto/python/: .gitignore  README.md  descriptors  pyproject.toml  setup.py
proto/scripts/: set_version.py  set_version.sh
proto/ts/: package-lock.json  package.json
proto/typescript/: .npmignore  package-lock.json  package.json  tsconfig.json
src/: CMakeLists.txt  Makefile  argparse_utils.h  candidate_search.cc  city_test.cc  cmake_install.cmake  config.cc  configuration.cc  exceptions.cc  filesystem.cc  filesystem_utils.cc  geojson_reader.cc  joyride_export_edges.cc  loki_benchmark.cc  map_matching.cc  merge.cpp  mmp_candidate_search.cc  mmp_edge_search.cc  mmp_psqlmatcher.cc  mmp_service.cc  node_bindings.cc  path_test.cc  proto_conversions.cc  routing.cc  service.cc  simple_matcher.cc  tile_server.cc  time_distance_test.cc  tyr_simple_service.cc  unconnected_ways.cc  universal_cost.cc  util.cc  util.cpp  valhalla.cc  valhalla_associate_openlr.cc  valhalla_associate_segments.cc  valhalla_benchmark_adjacency_list.cc  valhalla_benchmark_loki.cc  valhalla_benchmark_skadi.cc  valhalla_calc_bounding_circles.cc  (+23 more)
src/baldr/: .directededge.cc.swp  CMakeLists.txt  Makefile  accessrestriction.cc  accessrestriction.cs  admin.cc  admin.cs  admininfo.cc  attributes_controller.cc  attributes_controller.cs  boundingcircle.cc  cmake_install.cmake  complexrestriction.cc  compression_utils.cc  compression_utils.cs  conditional_speed_limit.cc  connectivity_map.cc  connectivity_map.cs  curler.cc  curler.cs  date_time_africa.h  date_time_antarctica.h  date_time_asia.h  date_time_australasia.h  date_time_backward.h  date_time_etcetera.h  date_time_europe.h  date_time_leapseconds.h  date_time_northamerica.h  date_time_pacificnew.h  date_time_southamerica.h  date_time_systemv.h  date_time_windows_zones.h  datetime.cc  datetime.cs  datetime2.cc  directededge.cc  directededge.cpp  directededge.cs  diskgraphreader.cc  (+65 more)
src/geo/: aabb2.cc  aabbll.cc  clipper2.cc  distanceapproximator.cc  ellipse.cc  geo.cc  linesegment2.cc  obb2.cc  point2.cc  pointll.cc  polyline2.cc  segment2.cc  tilehierarchy.cc  tiles.cc  util.cc  vector2.cc
src/heimdall/: CMakeLists.txt  util.cc  worker.cc
src/incidents/: CMakeLists.txt  edge_matcher.cc  incident_action.cc  traffic_writer.cc  utils.cc  worker.cc
src/loki/: CMakeLists.txt  Makefile  attributes_action.cc  benchmark.cc  check_coverage_action.cc  chinese_postman_action.cc  cmake_install.cmake  coverage_action.cc  height_action.cc  isochrone_action.cc  locate_action.cc  matrix_action.cc  node_search.cc  optimized_action.cc  polygon_search.cc  reach.cc  route_action.cc  search.cc  serializer_common.cc  service.cc  status_action.cc  tile_action.cc  time_distance_matrix_action.cc  timedistancematrix_action.cc  trace_route_action.cc  transit_available_action.cc  utils.h  worker.cc
src/meili/: CMakeLists.txt  Makefile  candidate_search.cc  cmake_install.cmake  config.cc  geojson_reader.cc  geometry_helpers.cc  map_matcher.cc  map_matcher_factory.cc  map_matching.cc  match_route.cc  routing.cc  service.cc  sssp.cc  topk_search.cc  traffic_segment_matcher.cc  transition_cost_model.cc  universal_cost.cc  valhalla_map_match_service.cc  valhalla_meili_worker.cc  valhalla_run_map_match.cc  viterbi_search.cc
src/midgard/: CMakeLists.txt  Makefile  aabb2.cc  aabbll.cc  clipper2.cc  cmake_install.cmake  distanceapproximator.cc  ellipse.cc  grid.cc  gridded_data.cc  linesegment2.cc  logging.cc  obb2.cc  point2.cc  point_tile_index.cc  pointll.cc  polyline2.cc  tilehierarchy.cc  tiles.cc  util.cc  vector2.cc
src/mjolnir/: CMakeLists.txt  Makefile  add_predicted_speeds.cc  admin.cc  admin_lua_proc.h  adminbenchmark.cc  adminbuilder.cc  (+104 more)
test/: CMakeCache.txt  CMakeLists.txt  Makefile  aabb2.cc  aabbll.cc  access_restriction.cc  actor.cc  adjacencylist.cc  admin  admin.cc  admininfobuilder.cc  alternates.cc  astar.cc  astar2.cc  astar_bikeshare.cc  astar_bss.cc  astar_failing.cc  attributes_controller.cc  auto_shorter_deprecated.cc  avoids.cc  bidirectional_astar.cc  cmake_install.cmake  complexrestriction.cc  compression.cc  configuration.cc  cost_tests_main.cc  countryaccess.cc  create_tile.cc  curl_tilegetter.cc  curl_tilegetter.cpp  customize_traffic.cc  datetime.cc  datetime2.cc  directededge.cc  directededgebuilder.cc  distanceapproximator.cc  double_bucket_queue.cc  edge_elevation.cc  edge_shape.h  edgecollapser.cc  (+158 more)
(+2361 files in other folders)
